Updated nuggets spaghetti and test

--- a/Test.html
+++ b/Test.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>First webpage</title>
+        <title>Recipe page</title>
     </head>
     <body>
-        <h1>Let me see how it goes</h1>
-        <p>with a little paragraph to boot</p>
+        <h1>Recipes</h1>
+        <a href="Chicken-nuggets.html">Chicken Nuggets</a>
+        <a href="Spaghetti.html">Spaghetti</a>
     </body>
 </html>
