Reordered recipes and set them as a list on index

--- a/Chicken-nuggets.html
+++ b/Chicken-nuggets.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Chicken Nuggets</h1>
+    <img src="Nuggets.jpg">
     <h2>Ingredients</h2>
     <ul>
         <li>3 skinless, boneless chicken breasts</li>
@@ -26,7 +27,6 @@
         <li>Bake nuggets in the preheated oven until browned and chicken is cooked through, about 20 minutes.</li>
     </ol>
     <h2>Results:</h2>
-    <img src="Nuggets.jpg">
-    <a href="Test.html">Go back</a>
+    <a href="Index.html">Go back</a>
 </body>
 </html>
