--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Recipes</h1>
-        <a href="Chicken-nuggets.html">Chicken Nuggets</a>
-        <a href="Spaghetti.html">Spaghetti</a>
+        <ul>
+            <li><a href="Chicken-nuggets.html">Chicken Nuggets</a></li>
+            <li><a href="Spaghetti.html">Spaghetti</a></li>
+        </ul>
     </body>
 </html>
