--- a/Spaghetti.html
+++ b/Spaghetti.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Spaghetti</h1>
+    <img src="Spaghetti.jpg">
     <h2>Ingredients</h2>
     <ul>
         <li>Spaghetti</li>
@@ -23,7 +24,6 @@
         <li>Serve with sauce</li>
     </ol>
     <h2>Results</h2>
-    <img src="Spaghetti.jpg">
-    <a href="Test.html">Go back</a>
+    <a href="Index.html">Go back</a>
 </body>
 </html>
